--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,7 +25,7 @@ jobs:
     # Build the Docker image
     - name: Build Docker Image
       run: |
-        docker build -t khushboosinghal25/rapidfortkhushboo:latest
+        docker build -t khushboosinghal25/rapidfortkhushboo:latest .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker Image
