--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,9 +25,11 @@ jobs:
     # Build the Docker image
     - name: Build Docker Image
       run: |
-        docker build -t DOCKER_USERNAME/rapidfortkhushboo:latest .
+        docker build -t DOCKER_USERNAME/khushboosinghal25/rapidfortkhushboo
+:latest .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker Image
       run: |
-        docker push DOCKER_USERNAME/rapidfortkhushboo:latest
+        docker push DOCKER_USERNAME/khushboosinghal25/rapidfortkhushboo
+:latest
