--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,9 +25,9 @@ jobs:
     # Build the Docker image
     - name: Build Docker Image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/rapidfortkhushboo:latest .
+        docker build -t khushboosinghal25/rapidfortkhushboo:latest .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker Image
       run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/rapidfortkhushboo:latest
+        docker push khushboosinghal25/rapidfortkhushboo:latest
