--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,6 @@
 name: Build and Push Docker Image
 
+# Trigger workflow on push to the main branch or on pull requests
 on:
   push:
     branches:
@@ -11,23 +12,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout code from the repository
+    # Step 1: Checkout the repository
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    # Log in to Docker Hub
+    # Step 2: Log in to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Build the Docker image
+    # Step 3: Build the Docker image
     - name: Build Docker Image
       run: |
-        docker build -t khushboosinghal25/rapidfortkhushboo:latest .
+        docker build -t khushboosinghal25/rapidfortkhushboo:latest \
+                     -t khushboosinghal25/rapidfortkhushboo:${{ github.sha }} .
 
-    # Push the Docker image to Docker Hub
+    # Step 4: Push the Docker image to Docker Hub
     - name: Push Docker Image
       run: |
         docker push khushboosinghal25/rapidfortkhushboo:latest
+        docker push khushboosinghal25/rapidfortkhushboo:${{ github.sha }}
+
+    # Step 5: Verify the pushed image (Optional Debugging Step)
+    - name: Verify Pushed Image
+      run: |
+        echo "Docker image 'khushboosinghal25/rapidfortkhushboo' pushed successfully!"
